# mkxp-z

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Rakefile  conanfile.py  conanfile.txt  extconf.rb  fake-ui.sh  meson.build  meson_options.txt  minimal.cpp  minimal.h  mkxp-z.gemspec  mkxp.json  mkxp_z.gemspec  notes.MD  sonar-project.properties  startpulse.sh
.github/workflows/: autobuild.yml  build-gem.yml  docker-image.yml
assets/: CMakeLists.txt
binding/: CMakeLists.txt  audio-binding.cpp  binding-mri.cpp  binding-mri.h  binding-util.cpp  bitmap-binding.cpp  disposable-binding.h  etc-binding.cpp  filesystem-binding.cpp  font-binding.cpp  gem-binding.cpp  gem-binding.h  graphics-binding.cpp  input-binding.cpp  meson.build  miniffi.cpp  miniffi.h  mkxpz-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  windowvx-binding.cpp
cmake/: DependencySetup.cmake  FindBzip2.cmake  FindFluidSynth.cmake  FindIconv.cmake  FindOgg.cmake  FindOpenAL.cmake  FindPixman.cmake  FindRuby.cmake  FindSDL2_sound.cmake  FindSteamworks.cmake  FindTHEORA.cmake  FindUchardet.cmake  FindVorbis.cmake  GetExternalLibs.cmake  GetWindowsDependencies.cmake  LocalToGlobalConverter.cmake
ext/: CMakeLists.txt
ext/mkxp_z/: CMakeLists.txt  extconf.rb  mkxp_z.c  mkxp_z.cpp  mkxp_z.h
icons/: ashenfrost.icns  reborn.icns  rejuvenation.icns
interfaces/: AbstractEventThread.cpp  AbstractEventThread.h  CMakeLists.txt  IAudio.h  IGraphics.h  IInput.h  ISharedState.h  ISyncPoint.h  ITexPool.h  meson.build
lib/: mkxp-z.rb  mkxp_z.rb
lib/defs/: audio.rb
lib/mkxp-z/: version.rb
linux/: CMakeLists.txt  Makefile  vars.sh
macos/Dependencies/: common.make
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/views/: SettingsMenuController.mm  TouchBar.mm
scripts/preload/: replace_game_script.rb
shader/: CMakeLists.txt  area.frag  lanczos3.frag  meson.build
sig/: audio.rbs  mkxp-z.rbs  mkxp_z.rbs
src/: CMakeLists.txt  binding.h  config.cpp  config.h  eventthread.cpp  eventthread.h  gamelauncher.cpp  gamelauncher.h  gamestate.cpp  gamestate.h  main.cpp  meson.build  mkxpz_global.h  rgssthreadmanager.h  settingsmenu.cpp  settingsmenu.h  sharedstate.cpp  sharedstate.h
src/audio/: alstream.cpp  audio.cpp  audio.h  audiostream.cpp  midisource.cpp  soundemitter.cpp  vorbissource.cpp
src/display/: bitmap.cpp  bitmap.h  font.cpp  font.h  graphics.cpp  graphics.h  plane.cpp  plane.h  sprite.cpp  sprite.h  tilemap-common.h  tilemap.cpp  tilemap.h  tilemapvx.cpp  tilemapvx.h  viewport.cpp  viewport.h  window.cpp  window.h  windowvx.cpp  windowvx.h
src/display/gl/: gl-meta.cpp  gl-meta.h  glstate.h  quad.h  quadarray.h  scene.cpp  shader.cpp  shader.h  texpool.cpp  texpool.h  tileatlasvx.cpp  transform.h
src/etc/: etc.h
src/filesystem/: filesystem.cpp  filesystem.h  filesystemImpl.cpp  filesystemImpl.h  filesystemImplApple.mm
src/input/: input.cpp  input.h  keybindings.cpp
src/net/: httplib.h  net.cpp
src/singletons/: AudioManager.cpp  AudioManager.h  ConfigManager.cpp  ConfigManager.h  DisplayManager.cpp  DisplayManager.h  InputManager.cpp  InputManager.h  ThreadManager.cpp  ThreadManager.h  TimeManager.cpp  TimeManager.h
src/util/: disposable.h  encoding.h  iniconfig.cpp  sdl-util.h  util.h  win-consoleutils.cpp
src/util/sdl/: SDL_Instance.cpp  SDL_Instance.h
test/: main.cpp  test_helper.rb  test_mkxp_z.rb
tests/gem/: startup_test.rb
tests/hires-bitmap/: hires-bitmap-test.rb
tests/path-cache-tests/: enumeration-and-read-test.rb
tests/path-cache-tests/archives/: EnumerationTest_10k.7z  EnumerationTest_20k.7z  EnumerationTest_30k.7z  EnumerationTest_40k.7z  EnumerationTest_50k.7z  EnumerationTest_50k.rgss3a  ReadTest_1.7z  ReadTest_2.7z
tests/sprite-bush-rotation/: spriteBushRotation.rb
windows/: .gitignore  CMakeLists.txt  Makefile  conan_config  vars.sh
